--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,16 +21,15 @@
             android:weightSum="9">
 
 
-        <androidx.cardview.widget.CardView
+        <com.cane.coronaampel.IndicatorCardView
             android:id="@+id/cv_r"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/margin_medium"
-            app:cardCornerRadius="@dimen/radius_medium"
             android:layout_weight="3"
              />
 
-        <androidx.cardview.widget.CardView
+        <com.cane.coronaampel.IndicatorCardView
             android:id="@+id/cv_ni"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -38,7 +37,7 @@
             app:cardCornerRadius="@dimen/radius_medium"
             android:layout_weight="3" />
 
-        <androidx.cardview.widget.CardView
+        <com.cane.coronaampel.IndicatorCardView
             android:id="@+id/cv_intensiv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
