--- a/app/src/main/res/layout/indicatorcardview.xml
+++ b/app/src/main/res/layout/indicatorcardview.xml
@@ -8,7 +8,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardBackgroundColor="@color/colorAccent"
+    app:cardBackgroundColor="@color/tlgrey"
     app:cardCornerRadius="@dimen/radius_medium"
     android:id="@+id/indicator_card"
     >
