--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/margin_medium"
     tools:context=".MainActivity">
 
 
@@ -44,25 +45,33 @@
             android:layout_height="match_parent"
             android:layout_margin="@dimen/margin_medium"
             app:cardCornerRadius="@dimen/radius_medium"
-            android:layout_weight="3" />
+            android:layout_weight="3" >
+        </com.cane.coronaampel.IndicatorCardView>
 
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_medium"
+                tools:text="TextView" />
+
+            <TextView
+                android:id="@+id/tv_url"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_medium"
+                android:onClick="openPM"
+                tools:text="@string/tv_pressemitteilung" />
     </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/bottom_bar"
             android:background="@color/colorPrimary"
             android:orientation="horizontal"
-            android:weightSum="9">
-</LinearLayout>
-    </LinearLayout>
+            >
 
-    <TextView
-        android:id="@+id/tv_debug"
-        android:layout_width="211dp"
-        android:layout_height="629dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="200dp" />
+        </LinearLayout>
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/loading_spinner"
