--- a/app/src/main/res/layout/indicatorcardview.xml
+++ b/app/src/main/res/layout/indicatorcardview.xml
@@ -10,6 +10,7 @@
     android:layout_height="match_parent"
     app:cardBackgroundColor="@color/tlgrey"
     app:cardCornerRadius="@dimen/radius_medium"
+    android:layout_margin="@dimen/margin_medium"
     android:id="@+id/indicator_card"
     >
 
