--- a/app/src/main/res/layout/indicatorcardview.xml
+++ b/app/src/main/res/layout/indicatorcardview.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/app_bg"
+    app:cardBackgroundColor="@color/app_bg"
     xmlns:tools="http://schemas.android.com/tools">
 <androidx.cardview.widget.CardView
 
@@ -52,4 +54,4 @@ android:id="@+id/indicator_ll"
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
-</merge>
+</androidx.cardview.widget.CardView>
