--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -28,4 +28,10 @@
         android:layout_height="wrap_content"
         android:text="@string/about_author"
         android:layout_margin="@dimen/margin_medium"/>
+    <TextView
+        android:id="@+id/tv_thanks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/about_thanks"
+        android:layout_margin="@dimen/margin_medium"/>
 </LinearLayout>
