--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:background="@color/app_bg"
-    tools:context=".UI.MainActivity">
+    tools:context=".ui.MainActivity">
 
 
 
@@ -18,20 +18,20 @@
             android:weightSum="9">
 
 
-            <com.cane.coronaampel.UI.IndicatorCardView
+            <com.cane.coronaampel.ui.IndicatorCardView
                 android:id="@+id/cv_r"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3" />
 
-            <com.cane.coronaampel.UI.IndicatorCardView
+            <com.cane.coronaampel.ui.IndicatorCardView
                 android:id="@+id/cv_ni"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 />
 
-            <com.cane.coronaampel.UI.IndicatorCardView
+            <com.cane.coronaampel.ui.IndicatorCardView
                 android:id="@+id/cv_intensiv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
