--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,65 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="@color/app_bg"
+    android:orientation="vertical"
     tools:context=".ui.MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="9">
 
-
-
-        <LinearLayout
+        <com.cane.coronaampel.ui.IndicatorCardView
+            android:id="@+id/cv_r"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="9">
+            android:layout_weight="3" />
 
+        <com.cane.coronaampel.ui.IndicatorCardView
+            android:id="@+id/cv_ni"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3" />
 
-            <com.cane.coronaampel.ui.IndicatorCardView
-                android:id="@+id/cv_r"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="3" />
+        <com.cane.coronaampel.ui.IndicatorCardView
+            android:id="@+id/cv_intensiv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3" />
 
-            <com.cane.coronaampel.ui.IndicatorCardView
-                android:id="@+id/cv_ni"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                />
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_medium"
+            tools:text="TextView" />
 
-            <com.cane.coronaampel.ui.IndicatorCardView
-                android:id="@+id/cv_intensiv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                />
-
-            <TextView
-                android:id="@+id/tv_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_medium"
-                tools:text="TextView" />
-
-            <TextView
-                android:id="@+id/tv_url"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_medium"
-                android:onClick="openPM"
-                tools:text="@string/tv_pressemitteilung" />
-        </LinearLayout>
-
+        <TextView
+            android:id="@+id/tv_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_medium"
+            android:onClick="openPM"
+            tools:text="@string/tv_pressemitteilung" />
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/loading_spinner"
-        style="?android:attr/progressBarStyle"
-        android:indeterminateTint="@color/colorPrimary"
-        android:background="#66666666"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:background="#66666666"
+        android:indeterminateTint="@color/colorPrimary" />
+</FrameLayout>
