--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_margin="@dimen/margin_medium"
     tools:context=".ui.AboutActivity">
-
-    <TextView
-        android:id="@+id/tv_about"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/about_text"
-        android:layout_margin="@dimen/margin_medium"/>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_data"
@@ -23,15 +19,32 @@
         android:layout_margin="@dimen/margin_medium"/>
 
     <TextView
-        android:id="@+id/tv_author"
-        android:layout_width="wrap_content"
+        android:id="@+id/link_pr_feed"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/about_author"
-        android:layout_margin="@dimen/margin_medium"/>
+        android:text="@string/link_feed"
+        android:layout_margin="@dimen/margin_medium"
+        android:onClick="openLink"/>
     <TextView
-        android:id="@+id/tv_thanks"
+        android:id="@+id/link_dp_berlin_senat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/about_thanks"
-        android:layout_margin="@dimen/margin_medium"/>
+        android:text="@string/link_dp_berlin"
+        android:layout_margin="@dimen/margin_medium"
+        android:onClick="openLink"/>
+    <TextView
+        android:id="@+id/link_dp_playstore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/link_dp_google"
+        android:layout_margin="@dimen/margin_medium"
+        android:onClick="openLink"/>
+    <TextView
+        android:id="@+id/link_git"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/link_git"
+        android:layout_margin="@dimen/margin_medium"
+        android:onClick="openLink"/>
 </LinearLayout>
+</ScrollView>
